# context-engineering

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  AI_Memory_From_Consumer_to_Code.pptx  AZURE_DEPLOYMENT_SUMMARY.md  CLAUDE.md  CONFIG_GUIDE.md  DEMO_QUICK_REFERENCE.md  DEMO_README.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  MCP_TUTORIALS.md  POST_COURSE_RESOURCES.md  README.md  RUNBOOK.md  STUDENT_SETUP_GUIDE.md  TROUBLESHOOTING_FAQ.md  WARNERS-LAWS.md  azure-details.md  check-markdown-spacing.js  claude_desktop_config.json  course-plan.md  fix-markdown.js  readme-model.md  requirements.txt  validate-environment.js  validate-links.js  ~$warner-context-engineering-oct-2025.pptx
.claude/: mcp.json  settings.local.json
.github/: GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SETUP_STOIC.md  copilot-instructions.md
config/: README.md  claude_desktop_config.json  mcp.json.example
context_journal_mcp_azure/: AZURE_DEPLOYMENT_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md
context_journal_mcp_local/: ARCHITECTURE_DIAGRAMS.md  GETTING_STARTED.md  INSTRUCTOR_GUIDE.md  (+2 more)
src/warnerco/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  inspector.json  pyproject.toml  pytest.ini  requirements.txt
src/warnerco/backend/app/: __init__.py  _dashboard_app.py  config.py  main.py  mcp_stdio.py  mcp_tools.py
src/warnerco/backend/app/adapters/: __init__.py  azure_search_store.py  base.py  chroma_store.py  factory.py  graph_store.py  json_store.py  scratchpad_store.py
src/warnerco/backend/app/api/: __init__.py  routes.py
src/warnerco/backend/app/langgraph/: __init__.py  flow.py
src/warnerco/backend/app/models/: __init__.py  graph.py  schematic.py  scratchpad.py
src/warnerco/backend/scripts/: index_azure_search.py  index_graph.py  restart_server.py  verify_graph.py
src/warnerco/backend/static/dash/: index.html
src/warnerco/backend/static/dash/_assets/: index.astro_astro_type_script_index_0_lang.BSSKHP45.js  index.astro_astro_type_script_index_0_lang.CQ8wB01D.js
src/warnerco/backend/static/dash/memory/: index.html
src/warnerco/backend/static/dash/schematics/: index.html
src/warnerco/backend/static/dash/scratchpad/: index.html
src/warnerco/backend/static/dash/styles/: global.css
src/warnerco/backend/tests/: __init__.py  conftest.py  test_graph_integration.py  test_graph_mcp_tools.py  test_graph_store.py  test_sampling_chroma.py  test_scratchpad.py
(+304 files in other folders)
